--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Reservia</title>
-		<link rel="icon" type="image/png" sizes="16x16" href="./logo/Reservia.svg" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
-		<link rel="stylesheet" href="style.css" />
-		<script src="https://kit.fontawesome.com/4fa80a1b2e.js" crossorigin="anonymous"></script>
-	</head>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Reservia</title>
+	<link rel="icon" type="image/png" sizes="16x16" href="./logo/Reservia.svg" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" />
+	<link
+		href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+		rel="stylesheet" />
+	<link rel="stylesheet" href="style.css" />
+	<script src="https://kit.fontawesome.com/4fa80a1b2e.js" crossorigin="anonymous"></script>
+</head>
+
+<div class="wrapper">
 
 	<body>
 		<!--Header-->
@@ -24,7 +29,8 @@
 					</h1>
 					<ul class="nav_bar">
 						<li class="hebergement_order change_color">
-							<a class="responsive_link change_hypertext change_color" href="#hebergements"> Hébergements</a>
+							<a class="responsive_link change_hypertext change_color" href="#hebergements">
+								Hébergements</a>
 						</li>
 						<li class="activites_order">
 							<a class="responsive_link change_hypertext1" href="#activités">Activités</a>
@@ -46,7 +52,8 @@
 					<button class="button_research_left">
 						<i class="fas fa-map-marker-alt"></i>
 					</button>
-					<input class="input_research" type="text" id="recherche" name="recherche" placeholder="Marseille,France" />
+					<input class="input_research" type="text" id="recherche" name="recherche"
+						placeholder="Marseille,France" />
 					<button class="button_research_right fas"></button>
 				</form>
 				<!--display filtre-->
@@ -101,7 +108,9 @@
 					<article class="hotel_hebergements">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
-								<img class="img_hebergements" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge de la cannebiére" />
+								<img class="img_hebergements"
+									src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+									alt="image auberge de la cannebiére" />
 							</div>
 							<div class="text_hebergements">
 								<h3 class="titre_hotel">Auberge de la Cannebiére</h3>
@@ -117,7 +126,9 @@
 					<article class="hotel_hebergements">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
-								<img class="img_hebergements" src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Image Hotel du port" />
+								<img class="img_hebergements"
+									src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+									alt="Image Hotel du port" />
 							</div>
 							<div class="text_hebergements">
 								<h3 class="titre_hotel">Hôtel du port</h3>
@@ -133,7 +144,9 @@
 					<article class="hotel_hebergements">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
-								<img class="img_hebergements" src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="image Hotel les mouettes" />
+								<img class="img_hebergements"
+									src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+									alt="image Hotel les mouettes" />
 							</div>
 							<div class="text_hebergements">
 								<h3 class="titre_hotel">Hôtel les mouettes</h3>
@@ -149,7 +162,9 @@
 					<article class="hotel_hebergements">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
-								<img class="img_hebergements" src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="image Hotel de la mer" />
+								<img class="img_hebergements"
+									src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+									alt="image Hotel de la mer" />
 							</div>
 							<div class="text_hebergements">
 								<h3 class="titre_hotel">Hôtel de la mer</h3>
@@ -165,7 +180,9 @@
 					<article class="hotel_hebergements">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
-								<img class="img_hebergements" src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="image Auberge le panier" />
+								<img class="img_hebergements"
+									src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+									alt="image Auberge le panier" />
 							</div>
 							<div class="text_hebergements">
 								<h3 class="titre_hotel">Auberge le panier</h3>
@@ -181,7 +198,9 @@
 					<article class="hotel_hebergements">
 						<a class="lien_Hebergements" href="#">
 							<div class="img_container">
-								<img class="img_hebergements" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="image Hotel chez Amina" />
+								<img class="img_hebergements"
+									src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+									alt="image Hotel chez Amina" />
 							</div>
 							<div class="text_hebergements">
 								<h3 class="titre_hotel">Hôtel chez Amina</h3>
@@ -206,7 +225,9 @@
 					<article class="hotel_populaires">
 						<a class="lien_Hebergements_pop" href="#">
 							<div class="img_container_populaire">
-								<img class="img_soleil_du_matin" src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="image Hotel le soleil du matin" />
+								<img class="img_soleil_du_matin"
+									src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+									alt="image Hotel le soleil du matin" />
 							</div>
 
 							<div class="text_soleil_du_matin">
@@ -225,7 +246,9 @@
 					<article class="hotel_populaires">
 						<a class="lien_Hebergements_pop" href="#">
 							<div class="img_container_populaire">
-								<img class="img_eau" src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="image au coeur de l'eau chambre d'hotes" />
+								<img class="img_eau"
+									src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+									alt="image au coeur de l'eau chambre d'hotes" />
 							</div>
 							<div class="text_soleil_du_matin">
 								<h3 class="titre_soleil_du_matin">Au coeur de l'eau Chambres d'hôtes</h3>
@@ -243,7 +266,9 @@
 					<article class="hotel_populaires">
 						<a class="lien_Hebergements_pop" href="#">
 							<div class="img_container_populaire">
-								<img class="img_blanc" src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt=" image Hotel Tout bleu et Blanc" />
+								<img class="img_blanc"
+									src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+									alt=" image Hotel Tout bleu et Blanc" />
 							</div>
 							<div class="text_soleil_du_matin">
 								<h3 class="titre_soleil_du_matin">Hôtel Tout bleu et Blanc</h3>
@@ -269,7 +294,9 @@
 						<a class="lien_Hebergements" href="#">
 							<article class="container_text_image_activity">
 								<div class="img_container_activity">
-									<img class="big_image size_image" src="./images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="image vieux port" />
+									<img class="big_image size_image"
+										src="./images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+										alt="image vieux port" />
 								</div>
 								<div class="text_activity_port text_activity">
 									<h3>Vieux port</h3>
@@ -281,7 +308,9 @@
 						<article class="container_text_image_activity">
 							<a class="lien_Hebergements" href="#">
 								<div class="img_container_activity">
-									<img class="midle_image size_image" src="./images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="image Fort de Pomégues" />
+									<img class="midle_image size_image"
+										src="./images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+										alt="image Fort de Pomégues" />
 								</div>
 								<div class="text_activity">
 									<h3>Fort de Pomégues</h3>
@@ -291,7 +320,9 @@
 						<article class="container_text_image_activity">
 							<a class="lien_Hebergements" href="#">
 								<div class="img_container_activity">
-									<img class="small_image size_image" src="./images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="image Iles du Frioul" />
+									<img class="small_image size_image"
+										src="./images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+										alt="image Iles du Frioul" />
 								</div>
 								<div class="text_activity">
 									<h3>Iles du Frioul</h3>
@@ -303,7 +334,9 @@
 						<a class="lien_Hebergements" href="#">
 							<article class="container_text_image_activity">
 								<div class="img_container_activity">
-									<img class="big_image size_image" src="./images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="image Parc National des Calanques" />
+									<img class="big_image size_image"
+										src="./images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+										alt="image Parc National des Calanques" />
 								</div>
 								<div class="text_activity">
 									<h3>Parc National des Calanques</h3>
@@ -315,7 +348,9 @@
 						<article class="container_text_image_activity">
 							<a class="lien_Hebergements" href="#">
 								<div class="img_container_activity">
-									<img class="small_image size_image" src="./images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="image Notre-Dame-de-la-Garde" />
+									<img class="small_image size_image"
+										src="./images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+										alt="image Notre-Dame-de-la-Garde" />
 								</div>
 								<div class="text_activity">
 									<h3>Notre-Dame-de-la-Garde</h3>
@@ -325,7 +360,9 @@
 						<article class="container_text_image_activity">
 							<a class="lien_Hebergements" href="#">
 								<div class="img_container_activity">
-									<img class="midle_image size_image" src="./images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="image Parc Longchamp" />
+									<img class="midle_image size_image"
+										src="./images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+										alt="image Parc Longchamp" />
 								</div>
 								<div class="text_activity">
 									<h3>Parc Longchamp</h3>
@@ -345,8 +382,10 @@
 					</div>
 					<ul>
 						<li class="footer_space"><a class="Hypertext_footer" href="#">Fonctionement du site</a></li>
-						<li class="footer_space"><a class="Hypertext_footer" href="#">Conditions générales de vente</a></li>
-						<li class="footer_space"><a class="Hypertext_footer" href="#">Données et confidentialité</a></li>
+						<li class="footer_space"><a class="Hypertext_footer" href="#">Conditions générales de vente</a>
+						</li>
+						<li class="footer_space"><a class="Hypertext_footer" href="#">Données et confidentialité</a>
+						</li>
 					</ul>
 				</div>
 				<div class="footer_text">
@@ -369,5 +408,8 @@
 				</div>
 			</div>
 		</footer>
-	</body>
+</div>
+</body>
+
+
 </html>
