--- a/index.html
+++ b/index.html
@@ -246,10 +246,11 @@
 					<article class="hotel_populaires">
 						<a class="lien_Hebergements_pop" href="#">
 							<div class="img_container_populaire">
-								<img class="img_eau"
+								<img class="img_soleil_du_matin"
 									src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-									alt="image au coeur de l'eau chambre d'hotes" />
+									alt="image Hotel le soleil du matin" />
 							</div>
+
 							<div class="text_soleil_du_matin">
 								<h3 class="titre_soleil_du_matin">Au coeur de l'eau Chambres d'hôtes</h3>
 								<p>Nuit à partir de <b>71 €</b></p>
@@ -258,27 +259,29 @@
 									<i class="change_color_star fas fa-star"></i>
 									<i class="change_color_star fas fa-star"></i>
 									<i class="change_color_star fas fa-star"></i>
-									<i class="change_color_star_grey fas fa-star"></i>
+									<i class="change_color_star fas fa-star"></i>
 								</div>
 							</div>
 						</a>
 					</article>
+
 					<article class="hotel_populaires">
 						<a class="lien_Hebergements_pop" href="#">
 							<div class="img_container_populaire">
-								<img class="img_blanc"
-									src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-									alt=" image Hotel Tout bleu et Blanc" />
+								<img class="img_soleil_du_matin"
+									src="./images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+									alt="image Hotel le soleil du matin" />
 							</div>
+
 							<div class="text_soleil_du_matin">
-								<h3 class="titre_soleil_du_matin">Hôtel Tout bleu et Blanc</h3>
+								<h3 class="titre_soleil_du_matin">Hotel Tout bleu et Blanc</h3>
 								<p>Nuit à partir de <b>68 €</b></p>
 								<div class="star_position_soleil_du_matin">
 									<i class="change_color_star fas fa-star"></i>
 									<i class="change_color_star fas fa-star"></i>
 									<i class="change_color_star fas fa-star"></i>
 									<i class="change_color_star fas fa-star"></i>
-									<i class="change_color_star_grey fas fa-star"></i>
+									<i class="change_color_star fas fa-star"></i>
 								</div>
 							</div>
 						</a>
