End with all modification

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 									<i class="change_color_star fas fa-star"></i>
 									<i class="change_color_star fas fa-star"></i>
 									<i class="change_color_star fas fa-star"></i>
-									<i class="change_color_star fas fa-star"></i>
+									<i class="change_color_star_grey fas fa-star"></i>
 								</div>
 							</div>
 						</a>
@@ -281,7 +281,7 @@
 									<i class="change_color_star fas fa-star"></i>
 									<i class="change_color_star fas fa-star"></i>
 									<i class="change_color_star fas fa-star"></i>
-									<i class="change_color_star fas fa-star"></i>
+									<i class="change_color_star_grey fas fa-star"></i>
 								</div>
 							</div>
 						</a>
